--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,7 @@
 }
 html, body{
     font-family: 'Product Sans', sans-serif;
+    -webkit-font-smoothing: antialiased !important;
 }
 
 @font-face {
@@ -49,6 +50,7 @@ html, body{
 
 button{
     border: none;
+    cursor: pointer;
 }
 
 button.submiter{
