--- a/src/components/Menu/styles.css
+++ b/src/components/Menu/styles.css
@@ -1,11 +1,18 @@
 /* MENU - LEFT */
-
+div.tudo{
+    grid-row: 2/3;
+    grid-column: 1/2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: space-between;
+}
 .menu {
     grid-row: 2/3;
     grid-column: 1/2;
     color: white;
     margin-left: 15px;
-    margin-top: 2vh;
+    margin-top: 2vh;    
 }
 
 .profile {
@@ -86,4 +93,3 @@
     
     color: #FFF;
 }
-
