--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,9 @@
     padding: 0;
     outline: none;
     box-sizing: border-box;
+    user-select: none;
 }
+
 html, body, textarea{
     font-family: 'Product Sans', sans-serif;
     -webkit-font-smoothing: antialiased !important;
