--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
     user-select: none;
 }
 
-html, body, textarea{
+html, body, textarea, input{
     font-family: 'Product Sans', sans-serif;
     -webkit-font-smoothing: antialiased !important;
 }
